# 7-Days-AI-Agents-Email-Crash-Course

./: .gitignore  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
eval_notebooks/: data-gen.ipynb  evaluations.ipynb
notebooks/: Day 1: Ingest and Index Your Data.ipynb  Day 2: Chunking and Intelligent Processing for Data.ipynb  Day 3: Add Search.ipynb  Day 4: Agents and Tools.ipynb  Day 5: Evaluation.ipynb
