[project]
name = "7-days-ai-agents-email-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.0.5",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
